tests/snapshots/examples_fixtures/functions__immutability_valid.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/functions/immutability_valid.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E001]: DUPLICATE NAME

Duplicate binding: `counter` is already defined.

  --> examples/functions/immutability_valid.flx:16:9
   |
16 |         let counter = n + 1;
   |         ^^^^^^^^^^^^^^^^^^^^

Hint:
  Use a different name or remove the previous definition.

   = note: first defined here
  --> examples/functions/immutability_valid.flx:13:5
   |
13 |     let counter = 0;
   |     ^^^^^^^^^^^^^^^^


--> compiler error[E300]: TYPE UNIFICATION ERROR

The 1st argument to `double` has the wrong type.

  --> examples/functions/immutability_valid.flx:32:32
   |
27 |     fn double(n) {

28 |         return n * 2;

29 |     }

30 | 

31 | 

32 |     let first_doubled = double(first(numbers));
   |                                ^^^^^^^^^^^^^^
   |                                -------------- this argument is `Option<Int>`

Help:
  Expected `Int` as the 1st argument.

Found 2 errors.
== stdout ==
<not executed>
